Добавлен текст Лорем Ипсум через файл l_g_1.js, используя метод document.write();. Изменены цвета.

--- a/l_g_1.css
+++ b/l_g_1.css
@@ -1,9 +1,9 @@
 h1 {
-	background-color: grey;
-	color: #2bc3cf;
+	background-color: black;
+	color: #fbc118;
 }
 
 body {
 	background-color: grey;
-	color: #0984d8;
+	color: black;
 }
