Добавлен второй заголовок на страницу l_g_1.html через метод Java Script: document.write();

--- a/l_g_1.css
+++ b/l_g_1.css
@@ -2,6 +2,10 @@ h1 {
 	background-color: black;
 	color: #fbc118;
 }
+h2 {
+	background-color: black;
+	color: #fbc118;
+}
 
 body {
 	background-color: grey;
